# routes/items.js
@@ -1,15 +1,11 @@
-const mongoose = require('mongoose');
+const express = require('express');
+const router = express.Router();
+const controller = require('../controllers/itemsController');
 
-const itemSchema = new mongoose.Schema({
-  name: {
-    type: String,
-    required: true
-  },
-  price: {
-    type: Number,
-    required: true
-  },
-  category: String
-});
+router.get('/', controller.getAllItems);
+router.get('/:id', controller.getItem);
+router.post('/', controller.createItem);
+router.put('/:id', controller.updateItem);
+router.delete('/:id', controller.deleteItem);
 
-module.exports = mongoose.model('Item', itemSchema);
+module.exports = router;
